# ha-petsafe-smartfeed

./: .env.example  .gitignore  README.md  docker-compose.yml  hacs.json  pyproject.toml
config/: configuration.yaml
custom_components/petsafe_smartfeed/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py  services.yaml  strings.json  switch.py
example_automations/: battery_low_alert.yaml  connection_lost_alert.yaml  food_low_alert.yaml  settings_not_synced_alert.yaml
tests/: conftest.py  test_api.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_init.py  test_sensor.py  test_switch.py  test_translations.py
